--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <h2>Bem-vindo à</h2>
       <h3>AD Eletrônica CWB</h3>
       <p>Especializada em manutenções Eletrônicas e Informática.</p>
-      <p>Do simples ao Avançado.</p>
+      <p>Do Simples ao Avançado.</p>
     </section>
   </main>
   <footer>
