--- a/contato.html
+++ b/contato.html
@@ -44,8 +44,8 @@
     </section>
   </main>
   <footer>
-    <p>Telefone: <a href="https://wa.me/5541920039265">(41) 9200-39265</a><br>
-    Instagram: <a href="https://instagram.com/adeletronicacwb" target="_blank">@adeletronicacwb</a></p>
+    <p>Whatsapp: <a href="https://wa.me/5541920039265">(41) 9200-39265</a><br>
+    Nos siga no Instagram: <a href="https://instagram.com/adeletronicacwb" target="_blank">@adeletronicacwb</a></p>
     <p>&copy; 2025 AD Eletrônica CWB</p>
   </footer>
   <script src="js/script.js"></script>
