--- a/sobre.html
+++ b/sobre.html
@@ -34,12 +34,12 @@
       <br>
       <p>Nossa missão é atender aos clientes de forma personalizada e transparente</p>
       <p>afim de trazer o melhor custo beneficio, visando qualidade, segurança </p>
-      <p>em conjunto com respeito e atenção aos pequenos detalhes</p>
+      <p>em conjunto com respeito e atenção aos pequenos detalhes.</p>
     </section>
   </main>
   <footer>
-    <p>Telefone: <a href="https://wa.me/5541920039265">(41) 9200-39265</a><br>
-    Instagram: <a href="https://instagram.com/adeletronicacwb" target="_blank">@adeletronicacwb</a></p>
+    <p>Whatsapp: <a href="https://wa.me/5541920039265">(41) 9200-39265</a><br>
+    Nos siga no Instagram: <a href="https://instagram.com/adeletronicacwb" target="_blank">@adeletronicacwb</a></p>
     <p>&copy; 2025 AD Eletrônica CWB</p>
   </footer>
   <script src="js/script.js"></script>
