Ajuste aba Produtos

--- a/produtos.html
+++ b/produtos.html
@@ -29,10 +29,15 @@
     <section>
       <h2>Produtos</h2>
       <br>
-        <p>Manutenção em Notebooks</p>
-        <p>Manutenção em placa mãe de Desktop ou Notebooks</p>
-        <p>Manutenção completa em Video Games de antigos aos mais atuais</p>
-        <p>Manutenção em placas eletrônicas industriais.</p>
+        <p>Reparo em Notebooks</p>
+        <p>Manutenção em placas mãe de Desktop ou Notebooks</p>
+        <p>   Limpeza interna, e troca dos condutores térmicos</p>
+        <br>
+        <p>Manutenção completa em Video Games, dos antigos aos mais atuais;</p>
+        <p>   Limpeza interna, substituição de componentes, reballing dos processadores</p>
+        <br>
+        <p>Manutenção em placas eletrônicas industriais;</p>
+        <p>   Manutenção, revisão preventiva, limpeza quimica em equipamentos eletrônicos industriais</p>
     </section>
   </main>
   <footer>
